src/objects/Enrolees__c.object
<CustomObject>
    <description>This object is used to capture additional request details like Enrollees/Polcies/Dependents/Plan Codes/PAC, etc on ERM cases.</description>
    <fields>
        <fullName>Access_Level_Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reporting Access Level Confidential Indicator for policy</description>
        <label>Access Level Confidential?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Remove__c</fullName>
        <label>Add/Remove</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>All_users_have_same_permission_as_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All users have same permission as policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Reporting__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Reporting indicator for Policy</description>
        <inlineHelpText>Note - For users who have multiple groups with different reporting levels, multiple user IDs may be needed in order to access their groups reporting.</inlineHelpText>
        <label>Allow Reporting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnnualSalary__c</fullName>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_groups__c</fullName>
        <label>Bill groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPTIN__c</fullName>
        <description>CPTIN for the dependent added for CPTIN</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CPTIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Enrollees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Center_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Communication Center Only captured for EServices</description>
        <inlineHelpText>Tools for Wellness Only</inlineHelpText>
        <label>Communication Center Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_it_has_been_atleast_48_hours__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>REMINDER: It takes 48 hours from the date of release for a policy to be available.</inlineHelpText>
        <label>Confirm it has been atleast 48 hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoordinationofBenefitsBegin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coordination of Benefits Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CoordinationofBenefitsEnd_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Coordination of Benefits End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CorrectedUpdatedSSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corrected/Updated SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Customer Number for the Policy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryPreference__c</fullName>
        <label>Delivery Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Preference</fullName>
                </value>
                <value>
                    <fullName>Online Only</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discontinue_Paper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discontinue Paper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Account_type__c</fullName>
        <description>EServices Division Account Type</description>
        <label>Division Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Key Account</fullName>
                </value>
                <value>
                    <fullName>National Account</fullName>
                    <label>National Account (Uniprise Strategic Services)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESP_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Policy ESP Enrollment</description>
        <label>ESP Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <description>Employer Name for Policy Added</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExistingPatient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactivate_Policy_Under_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivate Policy Under User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_groups_here__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Separate group number with comma</inlineHelpText>
        <label>List groups here</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedicarePartAEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part A End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicarePartAStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part A Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicarePartBEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part B End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicarePartBStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part B Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicarePartDEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part D End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MedicarePartDStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medicare Part D Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name for Plan Administrator Changes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permissions__c</fullName>
        <inlineHelpText>Note: Broker permissions cannot exceed “employer” permissions. Broker user permissions cannot exceed broker permissions.</inlineHelpText>
        <label>Permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligibility Update</fullName>
                </value>
                <value>
                    <fullName>Eligibility Inquiry</fullName>
                </value>
                <value>
                    <fullName>eServices Electronic Eligibility (e3)</fullName>
                </value>
                <value>
                    <fullName>Claim View (ASO Only)</fullName>
                </value>
                <value>
                    <fullName>Bill View</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Bill Pay - OBPP Only</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <description>Plan Code added for Dual Platform</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
                <value>
                    <fullName>CES</fullName>
                </value>
                <value>
                    <fullName>COSMOS</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
                <value>
                    <fullName>OBS</fullName>
                </value>
                <value>
                    <fullName>PRIME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <description>Policy related to the plan code added for Dual Platform</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryCareDentist__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Care Dentist</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryCarePhysician__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Care Physician</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorCoverageBeginDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Coverage Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorCoverageEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_CPTIN_Dependent__c</fullName>
        <description>Relationship for dependents added for CPTIN</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Disabled Dependent</fullName>
                </value>
                <value>
                    <fullName>Overage Dependent/Young Adult</fullName>
                </value>
                <value>
                    <fullName>Retiree</fullName>
                </value>
                <value>
                    <fullName>Surviving Spouse</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Level__c</fullName>
        <description>Reporting Level</description>
        <label>Reporting Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                </value>
                <value>
                    <fullName>Expanded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add a New User Profile Under Existing Broker Agency</fullName>
                </value>
                <value>
                    <fullName>Add Multiple Policies to an Existing Broker Agency</fullName>
                </value>
                <value>
                    <fullName>Add New Policy to an Existing Broker Agency Profile</fullName>
                </value>
                <value>
                    <fullName>Add/Update Multiple Policies to an Existing User Profile</fullName>
                </value>
                <value>
                    <fullName>Change Existing Broker Agency Reporting</fullName>
                </value>
                <value>
                    <fullName>Change Permissions to an Existing Policy</fullName>
                </value>
                <value>
                    <fullName>Create new Broker Agency Profile</fullName>
                </value>
                <value>
                    <fullName>Inactivate an Existing Broker Agency Profile</fullName>
                </value>
                <value>
                    <fullName>Inactivate Multiple Policies Under Existing Broker Agency</fullName>
                </value>
                <value>
                    <fullName>Request Broker Client reports</fullName>
                </value>
                <value>
                    <fullName>Update User Access to Existing Policies</fullName>
                </value>
                <value>
                    <fullName>Update/Inactivate/Reactivate an Existing User Profile</fullName>
                </value>
                <value>
                    <fullName>Add a new user Profile under Existing Employer</fullName>
                </value>
                <value>
                    <fullName>Add New policy to an Existing Employer Profile/Create New GPS Employer Profile</fullName>
                    <label>Add New policy to an Existing Employer Profile / Create New GPS Employer Profile</label>
                </value>
                <value>
                    <fullName>Change Existing Employer Reporting or Update Paper Invoice</fullName>
                </value>
                <value>
                    <fullName>Change Permission to an Existing Employer Policy</fullName>
                </value>
                <value>
                    <fullName>Request Employer Client Reports</fullName>
                </value>
                <value>
                    <fullName>Inactivate Existing Policy Under Employer</fullName>
                </value>
                <value>
                    <fullName>Inactive Existing Policy Under Employer</fullName>
                    <isActive>false</isActive>
                    <label>Inactive Existing Policy Under Employer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Details_Platform__c</fullName>
        <description>The Platform of the Request Details captured on the Policy added.</description>
        <label>Request Details Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRIME</fullName>
                </value>
                <value>
                    <fullName>UNET</fullName>
                </value>
                <value>
                    <fullName>NICE</fullName>
                </value>
                <value>
                    <fullName>EServices/Broker</fullName>
                </value>
                <value>
                    <fullName>EServices/Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Details</label>
        <referenceTo>Stream_Request_Details__c</referenceTo>
        <relationshipName>Additional_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Division_Account_Change_Type__c</fullName>
        <inlineHelpText>Requested reporting level and permissions on a broker CANNOT exceed the employer level permissions.</inlineHelpText>
        <label>Select Division Account Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business Changing to Key Account</fullName>
                </value>
                <value>
                    <fullName>Key Account Changing to Small Business(Reporting not available for small business, Existing reporting will be removed.)</fullName>
                </value>
                <value>
                    <fullName>Adding Report (Key Account Only)(Reporting not available for small business, Reporting will NOT be added if the client is small business.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <description>User ID related to the EServices Policy</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>NOTE: User ID will be used for identification purpose only.
NOTE: (For &quot;Inactivate Multiple Policies Under Existing Broker Agency&quot; Request Type Only) This will inactivate all users associated with the policy</inlineHelpText>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verify_change_permission_existing_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NOTE: The boxes checked above will become the new permissions and will replace all existing permissions
Note: If this is a Change to &quot;Agent of Record&quot; complete the following step action
Step 1. Remove policies under current broker 
Step 2. Create a new request form to &quot;add&quot; policies under New broker (&quot;Agent of Record&quot;)</inlineHelpText>
        <label>Verify the selected permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_the_selected_permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verify the selected permissions by checking this box</description>
        <label>Verify the selected permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_update_useraccess_existing_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NOTE: The boxes checked above will become the new permissions and will replace all existing permissions. Please make sure that you select all permissions that you wish the specific user/policy to possess. Requested reporting level and permissions on a user CANNOT exceed the employer level permissions.</inlineHelpText>
        <label>Verify the selected permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Additional Request Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Details__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Request Details</pluralLabel>
    <recordTypes>
        <fullName>CPTIN_Dependents</fullName>
        <active>true</active>
        <description>Record Type to capture Dependents for CPTIN Request Type.</description>
        <label>CPTIN Dependents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dual_Platform_Plan_Codes</fullName>
        <active>true</active>
        <description>Record Type to capture Plan Codes for Dual Platform Request Type.</description>
        <label>Dual Platform Plan Codes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enrollees</fullName>
        <active>true</active>
        <description>Record Type to capture Enrollees on ERM Case</description>
        <label>Enrollees</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plan_Administrator_Changes</fullName>
        <active>true</active>
        <description>Record Type to capture Plan Administrator Changes for Group Level Updates.</description>
        <label>Plan Administrator Changes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Policies</fullName>
        <active>true</active>
        <description>Record Type to capture policies for EServices</description>
        <label>Policies</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CPTIN_Exactly_11_Digits</fullName>
        <active>true</active>
        <description>This is used to restrict CPTIN number to exactly 11 digits.</description>
        <errorConditionFormula>AND(
    NOT(ISBLANK(CPTIN__c)),
OR(
      NOT(ISNUMBER(CPTIN__c)),  
      LEN(CPTIN__c) != 11
   )
)</errorConditionFormula>
        <errorDisplayField>CPTIN__c</errorDisplayField>
        <errorMessage>Please enter exactly 11 numeric digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_Birth_No_Future_Date</fullName>
        <active>true</active>
        <description>This is used to not allow a future date for Date of Birth.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Date_of_Birth__c)),
Date_of_Birth__c &gt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>DOB must not be a future date!</errorMessage>
    </validationRules>
</CustomObject>